<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentsGroupActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="168dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:layout_marginEnd="7dp"
        android:text="@string/grp_number_txt"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/grpNumberEdit"
        app:layout_constraintTop_toTopOf="@+id/grpNumberEdit" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="19dp"
        android:text="Факультет:"
        app:layout_constraintBottom_toTopOf="@+id/facultyEdit"
        app:layout_constraintStart_toStartOf="@+id/textView2" />

    <EditText
        android:id="@+id/grpNumberEdit"
        android:layout_width="168dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="47dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/facultyEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="63dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="16dp"
        android:layout_marginBottom="38dp"
        android:onClick="onOkBtnClick"
        android:text="@string/btn_ok_txt"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginStart="9dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="23dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/facultyNameImageTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/facultyNameImageTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="267dp"
        android:layout_marginBottom="266dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/tableRow" />

    <TextView
        android:id="@+id/grpNumberImageTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="6dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="162dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="17dp"
        app:layout_constraintBottom_toBottomOf="@+id/tableRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView android:text="Додаткові відомости"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/contract_flg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Наявність контрактників">

                </CheckBox>

                <CheckBox
                    android:id="@+id/privilege_flg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Наявність пільг">

                </CheckBox>

            </LinearLayout>


        </TableRow>


    </TableLayout>

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="47dp"
        app:layout_constraintBottom_toTopOf="@+id/btnRem"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent">

        <TextView android:text="@string/edu_level_txt"></TextView>


        <RadioGroup>

            <RadioButton
                android:id="@+id/edu_level_bachelor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></RadioButton>

            <RadioButton
                android:id="@+id/edu_level_master"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></RadioButton>

        </RadioGroup>

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Button" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Button" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Button" />
    </TableRow>

    <Button
        android:id="@+id/btnStudList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:onClick="onBtnStudListClick"
        android:text="Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow" />

    <ImageButton
        android:id="@+id/btnRem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:onClick="onDelete"
        app:layout_constraintBottom_toBottomOf="parent"


        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow"
        app:srcCompat="@android:drawable/ic_menu_delete" />

</androidx.constraintlayout.widget.ConstraintLayout>